# degen-ai

./: .gitignore  .pre-commit-config.yaml  CHANGELOG_PORTFOLIO.md  Makefile  PLACEHOLDER_ANALYSIS.md  README.md  REGIME_DETECTOR_FIX_PLAN.md  check_eth_spot.py  check_eth_spot_markets.py  config.toml.example  debug_spot_markets.py  dump_spot_raw.py  find_dual_market_assets.py  pyproject.toml  spot_meta_dump.json  test_e2e_dual_markets.py  test_market_metadata.py  test_market_resolution.py  test_perp_order.py  test_spot_order.py  verify_registry.py
.github/workflows/: ci.yml  deploy-docs.yml  release.yml  security.yml
backtest_results/: results.csv  summary.txt
config/: assets.json
data/: macro_calendar.json
docs/: ARCHITECTURE_DIAGRAM.md  CONFIGURATION.md  GOVERNANCE_CONFIG.md  PORTFOLIO_MANAGEMENT.md  QA-SUMMARY.md  README.md  index.md  package-lock.json  package.json  validate-consistency.js  validate-links.js
docs-site/: README.md  index.md  package.json  validate-code-examples.js  validate-links.js
docs-site/.vitepress/: config.mts
docs-site/api/: index.md
docs-site/architecture/: governance.md  market-registry.md  monitoring.md  overview.md  portfolio.md  signals.md
docs-site/guide/: backtesting.md  cli-reference.md  configuration.md  introduction.md  troubleshooting.md
docs-site/strategies/: funding-harvest.md  index.md  trend-following.md
docs/.vitepress/: config.mts
docs/api/: backtesting.md  core.md  governance.md  index.md  signals.md
docs/architecture/: decision-engine.md  overview.md  performance.md
docs/guide/: cli-reference.md  configuration.md  deployment.md  getting-started.md  troubleshooting.md
docs/legacy/: ARCHITECTURE_DIAGRAM.md  MACRO_CALENDAR_SETUP.md  PORTFOLIO_MANAGEMENT.md  STRATEGY_GOVERNANCE_METADATA.md
docs/strategies/: compression-pop.md  funding-calendar-clip.md  funding-flip-fade.md  funding-harvest.md  markfix-mean-revert.md  oi-drift-divergence.md  pairs-beta-sync.md  range-sip.md  session-bias.md  slowrider-trend.md  trend-following.md  unlock-watch.md
examples/: portfolio_rebalancing_example.py
prompts/: default.txt  governance.txt
scripts/: test_live_providers.py
src/hyperliquid_agent/: __init__.py  agent.py  asset_identity.py  cli.py  config.py  decision.py  exchange_limits.py  executor.py  funding.py  governed_agent.py  identity_registry.py  llm_client.py  market_registry.py  monitor.py  monitor_enhanced.py  portfolio.py  price_service.py
state/: governor.json  signal_cache.db
state/snapshots/: README.md  sample_fast_loop.json
strategies/: 01-funding-harvest-lite.md  02-funding-flip-fade.md  03-slowrider-trend.md  04-compression-pop.md  05-range-sip.md  06-oi-drift-divergence.md  07-session-bias.md  08-funding-calendar-clip.md  09-markfix-mean-revert.md  10-pairs-beta-sync.md  11-unlock-watch.md  12-dca-hedge.md
test_state/: governor_integration.json
tests/: __init__.py  conftest.py
tests/integration/: test_agent_flow.py  test_async_signal_collection.py  (+3 more)
(+76 files in other folders)
