[project]
name = "hyperliquid-trading-agent"
version = "0.1.0"
description = "Autonomous trading agent for Hyperliquid platform using LLM-based decision making"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "hyperliquid-python-sdk>=0.4.0",
    "openai>=1.0.0",
    "anthropic>=0.25.0",
    "typer>=0.9.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "pyrefly>=0.1.0", "pytest>=8.0.0"]

[project.scripts]
hyperliquid-agent = "hyperliquid_agent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperliquid_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # function call in argument defaults (false positive for typer)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pyrefly]
